[package]
name = "map"
version = "0.1.0"
authors = ["alexrichton <alex_richton@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli = { package = "map-cli", path = "cli" }
logger = { package = "map-logger", path = "common/logger" }
log = "0.4.8"