[package]
name = "map"
version = "0.0.1"
authors = ["alexrichton <alex_richton@protonmail.com>"]
license = "GPL-3.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli = { package = "map-cli", path = "cli" }

[workspace]
# This should only list projects that are not
# in the dependency tree in any other way
members = [
	"common/errors",
	"common/ed25519",
	"common/hash",
	"common/logger",
	"common/store",
	"common/mtree",
	"executor",
	"core",
    "chain",
	"consensus",
	"service",
	"rpc",
]
