[package]
name = "map-cli"
version = "0.1.0"
authors = ["MAP <developers@marcopolo.link>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
signal-hook = "0.1.13"
logger = { package = "map-logger", path = "../common/logger" }
service = { package = "map-service", path = "../service" }

[dependencies.libc]
version = "~0.2"
