[package]
name = "map-client"
version = "0.1.0"
authors = ["MAP <developers@marcopolo.link>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { package = "map-core", path = "../core" }
consensus = { package = "map-consensus", path = "../consensus" }
#serde = { version = "1.0.102", features = ["derive"] }
#bincode = "1.2.0"
#ed25519 = { package = "map-ed25519", path = "../common/ed25519" }
#hash = { package = "map-hash", path = "../common/hash" }
