[package]
name = "map-core"
version = "0.1.0"
authors = ["MAP <developers@marcopolo.link>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.102", features = ["derive"] }
bytes = { version="0.5.4", features = ["serde"] }
bincode = "1.2.0"
ed25519 = { package = "map-ed25519", path = "../common/ed25519" }
hash = { package = "map-hash", path = "../common/hash" }
