[package]
name = "map-core"
version = "0.1.0"
authors = ["MAP <developers@marcopolo.link>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.102", features = ["derive"] }
bytes = { version="0.5.4", features = ["serde"] }
log = "0.4.8"
hex = "0.4.2"
bincode = "1.2.0"
trie-db = "0.18.0"
hash-db = "0.15.0"
memory-db = "0.18.0"
ed25519 = { package = "map-ed25519", path = "../common/ed25519" }
hash = { package = "map-hash", path = "../common/hash" }
map-store = { path = "../common/store" }
map-tree = { path = "../common/mtree" }
errors = { package = "map-errors", path = "../common/errors" }
