[package]
name = "map-events"
version = "0.1.0"
authors = ["MAP <developers@marcopolo.link>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
core = { package = "map-core", path = "../core" }
crossbeam-channel = "0.4"
parking_lot = "0.10.0"
