[package]
name = "map-rpc"
version = "0.1.0"
authors = ["MAP <developers@marcopolo.link>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc-http-server = "14.0.6"
jsonrpc-core = "14.0.5"
jsonrpc-derive = "14.0.5"